  for details. This feature is intended to help with LUKS2 encryption, which
  reacts badly to partitions that are not sized as exact multiples of the
  encryption block size.

- Added check for too-small disks (most likely to be an issue when trying
  to use a too-small disk image); program now aborts if this happens.

- Added the ability to build sgdisk and cgdisk for Windows.

- Fixed build problems with recent versions of ncurses.

- Fixed bug that caused cgdisk to report incorrect partition attributes.

- Consolidated Makefiles for Linux, FreeBSD, Solaris, macOS, and Windows
  (32- and 64-bit). The old OS-specific Makefiles remain in case the new
  consolidated Makefile has problems, but the old ones are deprecated.
  (The Solaris support in the new Makefile is untested.)

1.0.8 (6/9/2021):
-----------------

- Fixed double byte swap operation on writes of partition name data on
  big-endian systems; this is in addition to the double byte swap fix on
  reading partition label data fixed in 1.0.7. (Thanks to Erik Larsson for
  both fixes.)

- Added feature to gdisk and sgdisk to enable swapping the byte order of
  partition names, so as to correct disks already affected by the preceding
  bug. This option is 'b' on the experts' menu in gdisk and
  -b/--byte-swap-name in sgdisk. This seems advanced/obscure enough that I
  don't want to clutter cgdisk's menu with this option, so I haven't added
  it there.

- Added type code for the Barebox boot loader (0xbb00;
  4778ED65-BF42-45FA-9C5B-287A1DC4AAB1).

- Trivial code cleanup.

1.0.7 (3/10/2021):
------------------

- Fixed bug that caused spurious warnings about the partition table
  header claiming an invalid size of partition entries when reading
  some MBR disks.

- Added ARM64 as an architecture for the Mac builds of gdisk and fixparts.
  The official GPT fdisk binaries of these files for macOS are now
  "universal" x86-64/ARM64 binaries, so they will run natively on the new M1